# ATS

./: CLAUDE.md  Joveo_HMS_QA_Test_Guide.docx  Joveo_HMS_Testing_Guide.docx  Joveo_HMS_Testing_Guide_v2.docx  README.md  eslint.config.js  metadata.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  req.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  ai.py  auth.py  candidate_bulk_import.py  candidates.py  imports.py  (+6 more)
backend/app/core/: config.py  email.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  candidate.py  candidate_comment.py  candidate_stage_history.py  candidate_talent_pool.py  enums.py  interview.py  offer.py  outreach_log.py  requisition.py  scorecard_template.py  talent_pool.py  user.py
backend/app/schemas/: ai.py  auth.py  candidate.py  candidate_bulk_import.py  imports.py  interview.py  outreach_log.py  requisition.py  scorecard_template.py  talent_pool.py  user.py
backend/app/services/: __init__.py  admin.py  ai.py  auth.py  candidate_bulk_import.py  candidates.py  imports.py  interviews.py  outreach_logs.py  requisitions.py  scorecards.py  talent_pools.py  users.py
backend/app/utils/: imports.py  prompts.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_phase1_schema_normalization.py  0003_phase5_drop_legacy_columns.py  0004_scorecard_template_owner.py
(+122 files in other folders)
