[project]
name = "ai-hms-backend"
version = "0.1.0"
description = "AI Hiring Management System backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-jose[cryptography]>=3.3",
  "passlib[argon2]>=1.7",
  "python-multipart>=0.0.9",
  "email-validator>=2.1",
  "python-dotenv>=1.0",
  "google-genai>=0.3"
]

[tool.uvicorn]
app = "app.main:app"
reload = true
host = "0.0.0.0"
port = 8000

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
